--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.username=root
 spring.datasource.password=123456
 
 spring.jpa.show-sql=true
+
+spring.jackson.property-naming-strategy=SNAKE_CASE
