--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 
 dependencies {
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.2.1.RELEASE'
 	compile('mysql:mysql-connector-java')
 	compile 'org.projectlombok:lombok:1.18.10'
